# qsh

./: .gitignore  AGENTS.md  Cargo.toml  DOCS.md  LICENSE  README.md  demo.tape  example.config.toml  flake.nix  install.sh
.github/workflows/: build-release.yml
prompts/: alts.txt  explain.txt  refine.txt  retry.txt  system.txt
src/: alts.rs  cache.rs  clean.rs  cli.rs  config.rs  context.rs  env_detect.rs  files.rs  generate.rs  known.rs  main.rs  prompt.rs  provider.rs  qshrc.rs  record.rs  retry.rs  shell.rs  stream.rs  ui.rs  xml_escape.rs
src/cmds/: cli.rs  config.rs  generate.rs  init.rs  known.rs  mod.rs  record.rs
src/providers/: claude.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  stream.rs
src/util/: alts.rs  cache.rs  env_detect.rs  files.rs  known.rs  mod.rs  project.rs  prompt.rs  qshrc.rs  retry.rs  settings.rs  ui.rs
