[package]
name = "qsh"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "qsh"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "io-std", "process", "signal", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
atty = "0.2"
rustyline = { version = "14", default-features = false }
which = "6"
tempfile = "3"

[dev-dependencies]

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
